--- a/packages/FitNoteIT-frontend/fitnoteit/public/index.html
+++ b/packages/FitNoteIT-frontend/fitnoteit/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -11,10 +11,9 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description"
+          content="Strona ta umożliwia notowanie wyników treningowych oraz tworzenie planów treningowych dla każdego poziomu zaawansowania. Przejrzysty interfejs pozwala na łatwe dodawanie i analizowanie postępów w ćwiczeniach. Odpowiednio dobrane plany treningowe pomogą osiągnąć zamierzone cele fitness." />
+    <meta name="keywords" content="Trening, Planowanie, Notowanie, Śledzenie, Postęp" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -30,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>FitNoteIT-Trenuj z nami</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
